finished circle page, fixed about links, added pics, finished photography gallery

--- a/app/partials/circle.html
+++ b/app/partials/circle.html
@@ -45,7 +45,7 @@
 				<span class="tag">android</span>
 				<span class="tag">sketching</span>
 				<span class="tag">usability</span>
-				<span class="tag">protyping</span>
+				<span class="tag">prototyping</span>
 			</section>
 		</article>  
 	</div>
