fixed noah link

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -42,7 +42,7 @@
 		    <div class="item">
 					<blockquote>
 						<h4>Some of my favorite people: </h4>
-						<a href="http://bysusanlin.com/">Susan</a>, <a href="http://byalicelee.com/">Alice</a>, <a href="http://tessrinearson.com">Tess</a>, <a href="http://jacksonmohsenin.com">Jackson</a>, <a href="ryhan.me">Ryhan</a>, <a href="https://twitter.com/mh">MH</a>, <a href="http://www.abeersleiman.com/"> Abeer</a>, <a href="https://twitter.com/amyquispe">Amy</a>, <a href="https://twitter.com/kevinschaefer">Kevin</a>, <a href="http://www.dorahan.com/">Dorahan</a>, <a href="http://marchaumann.net/">Marc</a>, <a href="http://www.pillaidesign.com/"> Aloke, <a href="http://hcokim.com">Harold</a>, <a href="nlevin.com">Noah</a>, <a href="http://technoheads.org ">Salem</a>, and <a href="http://katherinefrazer.com">Kat</a> 
+						<a href="http://bysusanlin.com/">Susan</a>, <a href="http://byalicelee.com/">Alice</a>, <a href="http://tessrinearson.com">Tess</a>, <a href="http://jacksonmohsenin.com">Jackson</a>, <a href="ryhan.me">Ryhan</a>, <a href="https://twitter.com/mh">MH</a>, <a href="http://www.abeersleiman.com/"> Abeer</a>, <a href="https://twitter.com/amyquispe">Amy</a>, <a href="https://twitter.com/kevinschaefer">Kevin</a>, <a href="http://www.dorahan.com/">Dorahan</a>, <a href="http://marchaumann.net/">Marc</a>, <a href="http://www.pillaidesign.com/"> Aloke, <a href="http://hcokim.com">Harold</a>, <a href="http://nlevin.com">Noah</a>, <a href="http://technoheads.org ">Salem</a>, and <a href="http://katherinefrazer.com">Kat</a> 
 					</blockquote>
 		    </div>
 		  </div>
