--- a/app/partials/jawbone.html
+++ b/app/partials/jawbone.html
@@ -99,12 +99,12 @@
 			<section>
 				<ul class="catlabels">
 					<li>
-						<img src="images/engineering.png">
+						<img src="images/engineering.png" alt="engineering">
 					</li>
 					<li>
 						<span>
 						<a href="http://jawbone.com/support">
-							<img src="images/icons/link-icon.png">
+							<img src="images/icons/link-icon.png" alt="link">
 						</a>
 					</span>
 					</li>
