fixed link issue

--- a/app/partials/jawbone.html
+++ b/app/partials/jawbone.html
@@ -103,8 +103,8 @@
 					</li>
 					<li>
 						<span>
-						<a href="http://jawbone.com/support">
-							<img src="images/icons/link-icon.png" alt="link">
+						<a href="http://jawbone.com/support" class="icons-link-icon">
+							<i class="icons-link-icon"></i>
 						</a>
 					</span>
 					</li>
