--- a/app/partials/maya.html
+++ b/app/partials/maya.html
@@ -31,7 +31,7 @@
 					<li>
 						<span>
 						<a href="http://highmarkblueshield.com/">
-							<img src="images/icons/link-icon.png">
+							<i class="icons-link-icon"></i>
 						</a>
 					</span>
 					</li>
