--- a/app/sass/_overrides.scss
+++ b/app/sass/_overrides.scss
@@ -327,6 +327,8 @@ blockquote {
 .icons-link-icon{
 	width: 50px;
 	height: 50px;
+	display: inline-block;
+	margin-bottom: -13px;
 }
 .brief {
 	font-weight: 600;
