--- a/app/partials/other.html
+++ b/app/partials/other.html
@@ -26,6 +26,65 @@
 <div class="row">
 	<div class="col-md-6 section">
 		<article>
+			<h1>Concept: Coin for Coinbase</h1>
+			<section>
+				<ul class="catlabels">
+					<li>
+						<img src="images/ux-design.png">
+					</li>
+					<li>
+						<img src="images/vis-design.png">
+					</li>
+				</ul>
+			</section>
+			<h4>
+				There are few Bitcoin mobile apps. The user interfaces and experiences for these existing apps are fairly complex. Transactions and monitoring of wallets should be easy and enjoyable. Given the rich experiences of touch interfaces and iOS flat design,  I  saw the opportunity to design a simple, clean, and rich experience.  I imagined this as a concept, Coin, for Coinbase. The features that I thought would be key for a Coinbase mobile app would be QR scanning, simple buy/sell rate checking, quick conversion, and simple transaction experiences.  I thought using swipe and touch gestures would be a great way to incorporate these features with an ease of use.”
+			</h4>
+			<section class="tags">
+				<span class="tag">ui</span>
+				<span class="tag">prototyping</span>
+				<span class="tag">concepts</span>
+			</section>
+		</article>   
+	</div>
+	<div class="col-md-6 section">
+		<div id="carousel2" class="carousel slide" data-ride="carousel2" data-interval="false">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#carousel2" data-slide-to="0" class="active"></li>
+		    <li data-target="#carousel2" data-slide-to="1"></li>
+				<li data-target="#carousel2" data-slide-to="2"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner">
+		    <div class="item active">
+		      <img src="images/coin-iosicon.png" alt="coin for coinbase" class="coin-offset">
+		      <div class="carousel-caption">
+						Coin: an iOS BitCoin wallet concept for Coinbase.
+		      </div>
+		    </div>
+		    <div class="item">
+		      <img src="images/coinflow.png" alt="user flow sketch" class="coin-offset">
+		      <div class="carousel-caption">
+						 Initial User Flow Sketch
+		      </div>
+		    </div>
+		    <div class="item">
+					<video width="649" height="365" controls>
+					  <source src="images/coininteractions.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+					</video>
+		      <div class="carousel-caption">
+						 Synopsis
+		      </div>
+		    </div>
+		  </div>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6 section">
+		<article>
 			<h1>CMU Housing Finder</h1>
 			<section>
 				<ul class="catlabels">
