replaced mp4 with vimeo

--- a/app/partials/other.html
+++ b/app/partials/other.html
@@ -71,12 +71,8 @@
 		      </div>
 		    </div>
 		    <div class="item">
-					<video width="649" height="365" controls>
-					  <source src="images/coininteractions.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-					</video>
-		      <div class="carousel-caption">
-						 Synopsis
-		      </div>
+					<iframe class="coin-offset" src="//player.vimeo.com/video/89895330" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+		      
 		    </div>
 		  </div>
 		</div>
