--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -8,5 +8,5 @@
 		</span>
 	</h1>
 		<br>
-	<p>Available for freelance work or new positions</p>
+	<h3>and currently designing at <u><a href="http://www.8tracks.com/">8tracks</a></u></h3>
 </div>
